fixed spacing for arrow and un needed scrollbar

--- a/part2/pages/src/styles/templates/homepage.scss
+++ b/part2/pages/src/styles/templates/homepage.scss
@@ -20,10 +20,9 @@ button {
   width:8vw;
   float: left;
   padding: 1vw;
-  height: 100vh;
 
   img {
-    width: 8vw;
+    width: 6vw;
     margin-top:2vw;
   }
 }
